--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section id="hero" class="d-flex flex-column justify-content-center">
       <div class="container" data-aos="zoom-in" data-aos-delay="100">
         <div class="hero-container mx-auto flex">
-          <img src="/assets/img/favicon.svg" alt="log" width="40%" />
+          <img src="assets/img/favicon.svg" alt="log" width="40%" />
           <div
             style="width: 180px; height: 1px; background: #45505b; margin: 30px"
           ></div>
